--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/github-script@0.8.0
         with:
-          github-token: ${{secrets.WF_SECRET_GITHUB}}
+          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
